--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ a {
 
 .feature-item-textbox {
   padding-top: 48px ;
+  padding-bottom: 60px;
 }
 
 .bridge-item {
@@ -229,7 +230,6 @@ a {
 
 
 .feature-item-header {
-  width: 155px;
   margin-bottom: 24px;
 }
 
@@ -260,7 +260,6 @@ a {
 .feature-item-describtion {
   width: 265px;
   margin: 0 auto;
-  margin-bottom: 60px;
 }
 
 .city-item p {
@@ -835,14 +834,14 @@ fieldset {
   content: "";
   position: absolute;
   top: -2px;
-  left: -42px;
+  left: 0px;
 
   width: 27px;
   height: 23px;
 
   background-image: url(../img/svg/checkbox-on-disabled.svg);
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: left;
 }
 
 .rent-price {
@@ -953,15 +952,16 @@ fieldset {
   left: 80%;
 }
 
-.range-button:hover, /*в styleguide этого нет, можно убрать*/
+.range-button:hover,
 .range-button:active {
-  background: #81b3d2;
+  background: #81b3d2; /*в styleguide этого нет, можно убрать*/
+  transform: scale(1.1);
 }
 
 .filters-submit-button {
   display: block;
   box-sizing: border-box;
-  width: 132px;
+  width: 134px;
   height: 35px;
   padding: 6px 0;
   margin-left: 86px;
@@ -988,10 +988,10 @@ fieldset {
   text-transform: uppercase;
   background-color: #ffffff;
 
-  padding-top: 25px;
+  padding-top: 24px;
   padding-bottom: 20px;
 
-  margin-bottom: 2px;
+  border-bottom: 1px solid #f2f2f2;
 }
 
 .quantity {
@@ -1130,15 +1130,15 @@ fieldset {
   display: flex;
 
   padding-left: 72px;
-  padding-top: 25px;
+  padding-right: 72px;
+  padding-top: 26px;
   padding-bottom: 30px;
-  margin-bottom: 2px;
+  border-bottom: 1px solid #f2f2f2;
 
-  /* height: 150px; временно */
 }
 
 .hotels-list h3 {
-  max-width: 260px;
+  max-width: 600px;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
@@ -1149,7 +1149,7 @@ fieldset {
 }
 
 .hotel-image {
-  margin-right: 33px;
+  margin-right: 30px;
   padding-top: 4px;
 }
 
@@ -1165,7 +1165,6 @@ fieldset {
   flex-wrap: wrap;
   flex-basis: 260px;
   flex-grow: 0;
-  margin-right: 520px;
 }
 
 .hotel-box-info {
@@ -1196,9 +1195,11 @@ fieldset {
 
 .hotel-review p {
   margin: 0;
+  margin-top: 3px;
 }
 
 .hotel-review {
+  margin-left: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
