исправил отступы у элементов допсписка

--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ a {
 
 .features-extra-list-textbox {
   padding-top: 161px;
+  padding-bottom: 85px;
 }
 
 .features-extra-list h4 {
@@ -302,7 +303,6 @@ a {
   color: #333333;
 
   width: 290px;
-  margin-bottom: 85px;
 }
 
 
