--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ a {
   /* min-height: 216px; */
   margin: 0 auto;
   padding-top: 61px;
-  padding-bottom: 50px;
+  padding-bottom: 52px;
 }
 
 .intro h1 {
@@ -196,6 +196,10 @@ a {
   text-transform: uppercase;
 }
 
+li.feature-item {
+  min-height: 256px;
+}
+
 .feature-item-header,
 .features-extra-list h4 {
   margin: 0 auto;
@@ -206,11 +210,6 @@ a {
 
   color: #000000;
 }
-
-/* .road-item .feature-item-header,
-.tourists-item .feature-item-header {
-  padding: 0 35px;
-} */
 
 .city-item,
 .bridge-item {
@@ -225,7 +224,7 @@ a {
 
 .feature-item-textbox {
   padding-top: 48px ;
-  padding-bottom: 55px;
+  padding-bottom: 57px;
   padding-left: 46px;
   padding-right: 46px;
   margin: 0 auto;
@@ -240,7 +239,7 @@ a {
   text-align: center;
   position: relative;
   display: block;
-  margin-bottom: 24px;
+  margin-bottom: 22px;
 }
 
 .feature-item-number::before {
@@ -274,12 +273,15 @@ a {
   list-style: none;
   margin: 0px;
   padding: 0px;
-
   background-color: #ffffff;
 }
 
+li.features-extra-list-item {
+  min-height: 330px;
+}
+
 .features-extra-list-textbox {
-  padding-top: 161px;
+  padding-top: 163px;
   padding-bottom: 85px;
   padding-left: 55px;
   padding-right: 55px;
@@ -287,7 +289,7 @@ a {
 
 .features-extra-list h4 {
   margin: 0 auto;
-  margin-bottom: 24px;
+  margin-bottom: 22px;
 }
 
 .features-extra-list p {
@@ -1306,10 +1308,10 @@ body {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+
 }
 
 .feature-item {
-  /* min-height: 256px; временно*/
   width: 400px;
 }
 
