--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,11 @@
-/* Подключение шрифтов с домена сайта:
-
-@font-face {
-  font-family: "PT Sans";
-  src: url("../fonts/pts55f-webfont.eot");
-  src: local("PT Sans"), local("PTSans-Regular"),
-       url("../fonts/pts55f-webfont.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/pts55f-webfont.woff2") format("woff2"),
-       url("../fonts/pts55f-webfont.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: "PT Sans bold";
-  src: url("../fonts/pts75f-webfont.eot");
-  src: local("PT Sans bold"), local("PTSans-Regular")
-       url("../fonts/pts75f-webfont.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/pts75f-webfont.woff2") format("woff2"),
-       url("../fonts/pts75f-webfont.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-
-} */
-
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
@@ -60,16 +36,20 @@ a {
 }
 
 /* Шапка с горизонтальной менюшкой */
+
 .main-header {
   background-color: #ffffff;
   position: relative;
+  min-height: 56px; /* прописываю для IE11 */
 }
 
 .header-logo {
   position: absolute;
   left: 50%;
   top: 0;
-  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+      -ms-transform: translate(-50%);
+          transform: translate(-50%);
 }
 
 .header-logo img {
@@ -124,7 +104,8 @@ a {
   text-align: right;
 }
 
-.menu-button:hover {
+.menu-button:hover,
+.menu-button:focus {
   color: #81b3d2;
 }
 
@@ -136,6 +117,7 @@ a {
 
 .intro {
   background-color: #ffffff;
+  min-height: 725px;
 }
 
 .intro-banner {
@@ -145,6 +127,8 @@ a {
   background: /* Т.З. п.3.9 */
     url("../img/svg/intro-mask.svg") no-repeat 0 calc(100% + 1px), /* Маска */
     url("../img/background-photo.jpg") no-repeat;
+
+  background-color: #6c849a; /* это средний цвет на картинке, чтоб логотип нормально отображался, если фон не загрузится*/
 }
 
 .intro-logo {
@@ -158,7 +142,7 @@ a {
   width: 520px;
   margin: 0 auto;
   padding-top: 61px;
-  padding-bottom: 52px;
+  padding-bottom: 25px;
 }
 
 .intro h1 {
@@ -178,6 +162,7 @@ a {
   font-weight: normal;
   font-size: 14px;
   line-height: 26px;
+  margin-bottom: 26px;
   text-align: center;
 }
 
@@ -186,6 +171,7 @@ a {
 .features {
   position: relative;
   z-index: 3;
+  min-height: 1098px;
 }
 
 .features-main-list {
@@ -222,8 +208,8 @@ li.feature-item {
 }
 
 .feature-item-textbox {
-  padding-top: 48px ;
-  padding-bottom: 57px;
+  padding-top: 46px ;
+  padding-bottom: 36px;
   padding-left: 46px;
   padding-right: 46px;
   margin: 0 auto;
@@ -238,7 +224,8 @@ li.feature-item {
   text-align: center;
   position: relative;
   display: block;
-  margin-bottom: 22px;
+  margin-bottom: 21px;
+
 }
 
 .feature-item-number::before {
@@ -256,6 +243,7 @@ li.feature-item {
 
 .feature-item-describtion {
   margin: 0 auto;
+  margin-bottom: 21px;
 }
 
 .feature-item-grey {
@@ -280,20 +268,21 @@ li.features-extra-list-item {
 }
 
 .features-extra-list-textbox {
-  padding-top: 163px;
-  padding-bottom: 85px;
+  padding-top: 160px;
+  padding-bottom: 60px;
   padding-left: 55px;
   padding-right: 55px;
 }
 
 .features-extra-list h4 {
   margin: 0 auto;
-  margin-bottom: 22px;
+  margin-bottom: 24px;
 }
 
 .features-extra-list p {
   margin: 0 auto;
   color: #333333;
+  margin-bottom: 21px;
 }
 
 .house {
@@ -313,7 +302,7 @@ li.features-extra-list-item {
 .booking {
   position: relative;
   z-index: 2;
-
+  min-height: 290px;
   text-transform: uppercase;
   background-color: #ffffff;
 }
@@ -322,7 +311,6 @@ li.features-extra-list-item {
   position: relative;
   z-index: 2;
   background-color: #ffffff;
-
   padding-top: 50px;
   padding-left: 315px;
   padding-right: 315px;
@@ -340,7 +328,12 @@ li.features-extra-list-item {
 .booking-text {
   line-height: 24px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 24px;
+}
+
+.booking-intro div {
+  padding-bottom: 1px;
+  margin-bottom: 22px;
 }
 
 .booking-search-button {
@@ -357,7 +350,8 @@ li.features-extra-list-item {
   background-color: #766357;
 }
 
-.booking-search-button:hover {
+.booking-search-button:hover,
+.booking-search-button:focus {
   background-color: #604e43;
 }
 
@@ -374,7 +368,9 @@ li.features-extra-list-item {
   top: 100%;
   left: 50%;
   visibility: hidden;
-  transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
 
   display: block;
   width: 568px;
@@ -386,19 +382,30 @@ li.features-extra-list-item {
   text-transform: uppercase;
 
   padding: 55px;
+  -webkit-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
   transition: all 0.5s linear;
 
 }
 
 .booking-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .booking-form div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   width: 458px;
 
   margin-bottom: 29px;
@@ -407,7 +414,7 @@ li.features-extra-list-item {
 .booking-form .adults-box,
 .booking-form .children-box {
   width: 229px;
-  margin-bottom: 50px;
+  margin-bottom: 53px;
 
 
 }
@@ -415,7 +422,9 @@ li.features-extra-list-item {
 .booking-popup input {
   display: block;
   min-width: 20px;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
@@ -434,6 +443,18 @@ li.features-extra-list-item {
   padding-bottom: 6px;
 }
 
+.booking-popup input::-webkit-input-placeholder {
+  color: #000000;
+}
+
+.booking-popup input:-ms-input-placeholder {
+  color: #000000;
+}
+
+.booking-popup input::-ms-input-placeholder {
+  color: #000000;
+}
+
 .booking-popup input::placeholder {
   color: #000000;
 }
@@ -444,7 +465,11 @@ li.features-extra-list-item {
 
 .booking-popup input:focus {
   background-color: #ffffff;
-  outline: 2px solid #ebebeb;
+  /* outline: 2px solid #ebebeb; */
+  /* outline-offset:-2px; */
+  outline: none;
+  -webkit-box-shadow: 0 0 0 2px #ebebeb inset;
+          box-shadow: 0 0 0 2px #ebebeb inset;
 }
 
 .arrival-date,
@@ -469,7 +494,8 @@ li.features-extra-list-item {
   fill: #cacaca;
 }
 
-.calendar-button:hover svg {
+.calendar-button:hover svg,
+.calendar-button:focus svg, {
   fill: #000000;
 }
 
@@ -490,7 +516,9 @@ li.features-extra-list-item {
 
 .adults-box input,
 .children-box input {
-  flex-grow: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   width: 38px;
 
   padding-left: 15px;
@@ -498,7 +526,9 @@ li.features-extra-list-item {
 
 .adults-box label,
 .children-box label {
-  order: -2;
+  -webkit-box-ordinal-group: -1;
+      -ms-flex-order: -2;
+          order: -2;
 }
 
 .children-box label {
@@ -522,7 +552,9 @@ li.features-extra-list-item {
 }
 
 .minus-rate-button {
-  order: -1;
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
 }
 
 .minus-rate-button::before {
@@ -556,11 +588,15 @@ li.features-extra-list-item {
   height: 3px;
 
   background-color: #a9a9a9;
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .booking-form-rate-button:hover::before,
-.booking-form-rate-button:hover::after {
+.booking-form-rate-button:hover::after,
+.booking-form-rate-button:focus::before,
+.booking-form-rate-button:focus::after {
   background-color: #000000;
 }
 
@@ -571,7 +607,9 @@ li.features-extra-list-item {
 
 .popap-submit-button {
   display: block;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 
   font-size: 21px;
   line-height: 26px;
@@ -580,14 +618,17 @@ li.features-extra-list-item {
   color: #ffffff;
   background-color: #81b3d2;
 
-  box-shadow: none;
+  -webkit-box-shadow: none;
+
+          box-shadow: none;
   border: none;
   cursor: pointer;
 
   padding: 16px;
 }
 
-.popap-submit-button:hover {
+.popap-submit-button:hover,
+.popap-submit-button:focus {
   background-color: #669ec0;
 }
 
@@ -655,7 +696,8 @@ li.features-extra-list-item {
   background-color: #81b3d2;
 }
 
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: #669ec0;
 }
 
@@ -671,7 +713,7 @@ li.features-extra-list-item {
   background: #81b3d2 url("../img/svg/fb-icon.svg") no-repeat 50%;
 }
 
-.youtube{
+.youtube {
   background: #81b3d2 url("../img/svg/youtube.svg") no-repeat 50%;
 }
 
@@ -680,7 +722,8 @@ li.features-extra-list-item {
   fill: #231f20;
 }
 
-.copyright-logo:hover {
+.copyright-logo:hover,
+.copyright-logo:focus {
   fill: #81b3d2;
 }
 
@@ -826,8 +869,13 @@ fieldset {
   background-position: left;
 }
 
+.filters-checkbox:focus + label::before { /* Т.З. Д.26 */
+  opacity: 0.5;
+}
+
 .rent-price {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   width: 316px;
 
   padding-left: 210px;
@@ -841,7 +889,9 @@ fieldset {
 .price-inputs {
   position: relative;
 
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+
+          box-sizing: border-box;
   height: 36px;
   margin-bottom: 20px;
 
@@ -859,7 +909,9 @@ fieldset {
   height: 22px;
 
   background: #ffffff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .price-inputs label {
@@ -882,6 +934,7 @@ fieldset {
 
 .price-inputs input {
   width: 60px;
+  height: 23px;
   margin: 0;
 
   color: inherit;
@@ -922,7 +975,8 @@ fieldset {
   background: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -935,18 +989,22 @@ fieldset {
 }
 
 .range-button:hover,
-.range-button:active {
+.range-button:active,
+.range-button:focus {
   background: #81b3d2; /*в styleguide этого нет, можно убрать*/
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .filters-submit-button {
   display: block;
-  box-sizing: border-box;
-  width: 134px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 135px;
   height: 35px;
   padding: 6px 0;
-  margin-left: 86px;
+  margin-left: 85px;
 
   text-transform: uppercase;
   background-color: transparent;
@@ -957,7 +1015,8 @@ fieldset {
   cursor: pointer;
 }
 
-.filters-submit-button:hover {
+.filters-submit-button:hover,
+.filters-submit-button:focus {
   color: #000000;
   background-color: #ffffff;
 }
@@ -965,8 +1024,12 @@ fieldset {
 /* Сортировка */
 
 .sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   background-color: #ffffff;
 
@@ -977,11 +1040,12 @@ fieldset {
 }
 
 .quantity {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   width: 135px;
   padding-left: 72px;
   margin: 0;
-  margin-right: 33px;
+  margin-right: 28px;
 
   font-weight: bold;
   font-size: 21px;
@@ -1001,8 +1065,12 @@ fieldset {
 
 .sorting-type {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
   font-size: 12px;
@@ -1028,7 +1096,8 @@ fieldset {
   border-bottom: 1px dashed;
 }
 
-.sorting-type-off:hover {
+.sorting-type-off:hover,
+.sorting-type-off:focus {
   color: #81b3d2;
   border-bottom: 1px dashed;
 }
@@ -1054,7 +1123,8 @@ fieldset {
 
 .sorting-direction a {
   display: block;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   width: 0px;
   height: 0px;
   border: 5px solid #cacaca;
@@ -1081,7 +1151,8 @@ fieldset {
   border-left-color: transparent;
 }
 
-.sorting-direction a:hover {
+.sorting-direction a:hover,
+.sorting-direction a:focus {
   border-color: #000000;
   border-right-color: transparent;
   border-left-color: transparent;
@@ -1096,17 +1167,26 @@ fieldset {
 /* Выдача результатов поиска */
 
 .hotels-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 
   margin: 0;
   padding: 0;
 }
 
-.hotels-list li{
+.hotels-list li {
   list-style: none;
   text-transform: uppercase;
   background-color: #ffffff;
+
+  display: -webkit-box;
+
+  display: -ms-flexbox;
 
   display: flex;
 
@@ -1119,7 +1199,7 @@ fieldset {
 }
 
 .hotels-list h3 {
-  max-width: 600px;
+  width: 600px;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
@@ -1134,18 +1214,25 @@ fieldset {
   padding-top: 4px;
 }
 
-.hotel-image img{
+.hotel-image img {
   display: block;
   width: 135px;
   height: 90px;
 }
 
 .hotel-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-content: flex-start;
-  flex-wrap: wrap;
-  flex-basis: 260px;
-  flex-grow: 0;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 260px;
+      flex-basis: 260px;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
 }
 
 .hotel-box-info {
@@ -1154,7 +1241,9 @@ fieldset {
 }
 
 .hotel-box-booking {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .hotel-type {
@@ -1181,14 +1270,25 @@ fieldset {
 
 .hotel-review {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .rating {
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   display: block;
   width: 110px;
   background-color: #f2f2f2;
@@ -1224,7 +1324,8 @@ fieldset {
   display: block;
 }
 
-.hotel-name:hover {
+.hotel-name:hover,
+.hotel-name:focus {
   color: #81b3d2;
 }
 
@@ -1244,7 +1345,8 @@ fieldset {
   padding: 3px 0px;
 }
 
-.info-button:hover {
+.info-button:hover,
+.info-button:focus {
   background-color: #669ec0;
 }
 
@@ -1265,7 +1367,8 @@ fieldset {
   padding: 3px 0px;
 }
 
-.booking-button:hover {
+.booking-button:hover,
+.booking-button:focus {
   background-color: #604e43;
 }
 
@@ -1288,19 +1391,27 @@ body {
   width: 1200px;
   margin: 0 auto;
 
-  box-shadow: 0 0 35px 3px rgba(0, 0, 0, 0.3); /* Т.З. п.3.6 */
+  -webkit-box-shadow: 0 0 35px 3px rgba(0, 0, 0, 0.3);
+
+          box-shadow: 0 0 35px 3px rgba(0, 0, 0, 0.3); /* Т.З. п.3.6 */
 }
 
 .site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 /* Основной список преимуществ - главный флекс контейнер */
 .features-main-list {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 
 }
 
@@ -1312,8 +1423,11 @@ body {
 .city-item,
 .bridge-item {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .city-item .feature-item-textbox,
@@ -1323,7 +1437,9 @@ body {
 
 .city-item .feature-item-image,
 .bridge-item .feature-item-image {
- flex-grow: 1;
+ -webkit-box-flex: 1;
+     -ms-flex-positive: 1;
+         flex-grow: 1;
 }
 
 .feature-item-image img {
@@ -1334,9 +1450,13 @@ body {
 
 /* Вложенный список преимуществ тоже флекс контейнер */
 .features-extra-list {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap; /* на случай новых элеметов в списке */
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .features-extra-list-item {
@@ -1345,7 +1465,7 @@ body {
 
 .map {
   position: relative;
-  margin-bottom: -125px;
+  margin-bottom: -128px;
 }
 
 .map iframe {
@@ -1353,19 +1473,32 @@ body {
 }
 
 .site-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 120px;
-  justify-content: center; /* Т.З. п.3.7 */
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; /* Т.З. п.3.7 */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 34px; /* выравнивание по центру для IE 11 */
   padding-bottom: 34px;
 }
 
 .social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hashtag,
@@ -1376,6 +1509,8 @@ body {
 
 /* catalog.html */
  .filters {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
  }
 
@@ -1383,6 +1518,8 @@ body {
 
  .popup-appear {
    visibility: visible;
-   transform: translate(-50%, 0);
+   -webkit-transform: translate(-50%, 0);
+       -ms-transform: translate(-50%, 0);
+           transform: translate(-50%, 0);
 }
 
