--- a/css/style.css
+++ b/css/style.css
@@ -1079,7 +1079,9 @@ fieldset {
 
 .sorting p:nth-of-type(2) {
   max-width: 76px;
+  margin: 0px;
   margin-right: 40px;
+  padding: 12px 0px;
 
   font-size: 12px;
   line-height: 18px;
@@ -1089,6 +1091,8 @@ fieldset {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1105,11 +1109,12 @@ fieldset {
 .sorting-type li {
   max-width: 77px;
   margin-right: 33px;
+  padding: 12px 0;
 }
+
 .sorting-type li:last-child {
   margin-right: 0px;
 }
-
 
 .sorting-type-on {
   color: #81b3d2;
